# CodeAtlas

./: .gitignore  LICENSE  Project_Spec.md  README.md  docker-compose.yml  test_output.txt
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  eval.py  impact.py  query.py  repos.py
backend/app/core/: config.py  database.py  qdrant.py
backend/app/models/db/: __init__.py  base.py  chat_message.py  chat_session.py  chunk.py  file.py  ingestion_job.py  question.py  repository.py  user.py
backend/app/models/schemas/: __init__.py  auth.py  chat.py  query.py  repository.py
backend/app/services/analysis/: api_extractor.py  dependency_graph.py  impact.py
backend/app/services/evaluation/: progress.py  retrieval_eval.py
backend/app/services/generation/: llm_json.py  onboarding.py  qa.py  summarizer.py
backend/app/services/ingestion/: chunk.py  cloner.py  embedder.py  file_filter.py  parser.py  pipeline.py  store.py
backend/app/services/ingestion/parsers/: __init__.py  fallback_parser.py  go_parser.py  java_parser.py  js_parser.py  python_parser.py  ts_parser.py
backend/app/services/search/: explain.py  rerank.py  retriever.py  sparse.py
backend/benchmarks/: run.py
backend/tests/: conftest.py
backend/tests/benchmarks/: test_retriever_benchmark.py
backend/tests/integration/: test_cloner.py
backend/tests/unit/: test_analysis.py  test_embedder.py  test_file_filter.py  test_parsers.py  test_pipeline.py  test_retriever.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/api/: client.test.ts
frontend/src/__tests__/components/: Badge.test.tsx  Spinner.test.tsx
frontend/src/__tests__/context/: AuthContext.test.tsx
frontend/src/__tests__/pages/: CallbackPage.test.tsx
frontend/src/api/: chat.ts  client.ts  query.ts  repos.ts
frontend/src/components/: AppFooter.tsx  Badge.tsx  Header.tsx  Spinner.tsx  TechIcon.tsx
frontend/src/components/architecture/: BenchmarksSection.tsx  FeaturesUnlockedSection.tsx  HybridSearchSection.tsx  PipelineSection.tsx  TechStackSection.tsx  archData.ts
frontend/src/components/dashboard/: AskAIWorkspace.tsx  DependencyGraph.tsx  EvalDashboard.tsx  ExplorePanel.tsx  ImpactWorkbench.tsx  MobileNav.tsx  OverviewPanel.tsx  Sidebar.tsx  UnderstandPanel.tsx  nav.tsx  shared.tsx
frontend/src/components/ingestion/: StageList.tsx
frontend/src/components/landing/: AnalyzeForm.tsx  DeleteModal.tsx  FeaturesGrid.tsx  HowItWorks.tsx  RepoCard.tsx  RepoSection.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ArchitecturePage.tsx  CallbackPage.tsx  DashboardPage.tsx  IngestionPage.tsx  LandingPage.tsx
frontend/src/types/: index.ts
