[project]
name = "codeatlas-backend"
version = "1.0.0"
description = "AI-powered repository intelligence platform — FastAPI backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # FastAPI & Web
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    # Database
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.13.0",

    # Authentication
    "authlib==1.3.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==41.0.7",
    "httpx==0.25.2",

    # Repository & Code Parsing
    "gitpython==3.1.40",
    "tree-sitter-languages==1.10.2",

    # Data & Graph Analysis
    "networkx==3.2",
    "numpy==1.26.2",

    # Vector Database
    "qdrant-client==2.7.3",

    # LLM & Embeddings
    "google-generativeai==0.3.0",

    # Utilities
    "python-dotenv==1.0.0",
    "pytz==2023.3",

    # Logging
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.0",
    "pylint==3.0.3",
    "mypy==1.7.1",
    "httpx==0.25.2",   # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Tool Configs ────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pylint.main]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]  # disable missing docstring warnings

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
